# GUtil

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake_modules/: Findglfw3.cmake
txbase/: CMakeLists.txt  fwddecl.h  stdafx.h
txbase/gui/: drawing.cc  drawing.h  fontmap.cc  fontmap.h  gui.cc
txbase/image/: image.cc  image.h
txbase/libs/: stb_image_write.h
txbase/libs/gl3w/: CMakeLists.txt
txbase/libs/gl3w/GL/: glcorearb.h
txbase/math/: base.h  bbox.h  color.cc  color.h  geometry.cc  geometry.h  matrix.cc  matrix.h  quaternion.h  random.h  ray.h  sample.cc  sample.h  spherical.cc  spherical.h  transform.cc  transform.h  vector.h
txbase/misc/: randomdata.h
txbase/opengl/: application.cc  application.h  demo.h  input.h  opengl.cc  opengl.h  skybox.cc  skybox.h
txbase/scene/: camera.h
txbase/shader/: phong.h
txbase/shape/: mesh.cc  mesh.h  obj.cc  obj.h
txbase/sse/: bool.h  float.h  int.h  sse.h
txbase/sys/: memory.h  thread.cc  thread.h  tools.cc  tools.h
txbase_tests/: CMakeLists.txt  helper.cc  helper.h
txbase_tests/libs/gtest/: CMakeLists.txt
txbase_tests/math/: base_tests.cc  color_tests.cc  matrix_tests.cc  quaternion_tests.cc  ray_tests.cc  sse_tests.cc  vector_tests.cc
